--- a/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/Tyuiu.VaganovMA.Sprint7.TaskProject.V13.csproj
+++ b/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/Tyuiu.VaganovMA.Sprint7.TaskProject.V13.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.VaganovMA.Sprint7.TaskProject.V13.Lib\Tyuiu.VaganovMA.Sprint7.TaskProject.V13.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
