--- a/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/Tyuiu.VaganovMA.Sprint7.TaskProject.V13.csproj
+++ b/Tyuiu.VaganovMA.Sprint7.TaskProject.V13/Tyuiu.VaganovMA.Sprint7.TaskProject.V13.csproj
@@ -9,7 +9,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tyuiu.VaganovMA.Sprint7.TaskProject.V13.Lib\Tyuiu.VaganovMA.Sprint7.TaskProject.V13.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
